[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Options/Apply.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Options/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Options/Resume.gd" type="Script" id=3]
[ext_resource path="res://Sprites/radio_off.png" type="Texture" id=4]
[ext_resource path="res://Sprites/arrow.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Options/Resolution.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Options/AspectRatio.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Options/DisplayMode.gd" type="Script" id=8]
[ext_resource path="res://Fonts/hud_font.tres" type="DynamicFont" id=9]

[node name="SettingsMenu" type="Panel"]
visible = false
margin_left = 160.0
margin_top = 90.0
margin_right = 1760.0
margin_bottom = 990.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nothing" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="AspectRatio" type="Control" parent="."]
margin_left = 43.0
margin_top = 72.0
margin_right = 83.0
margin_bottom = 112.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Clickable" type="OptionButton" parent="AspectRatio"]
margin_left = 310.0
margin_right = 560.0
margin_bottom = 45.0
focus_mode = 0
custom_fonts/font = ExtResource( 9 )
enabled_focus_mode = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AspectRatio"]
margin_right = 283.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 9 )
text = "ASPECT RATIO:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowLeft" type="Sprite" parent="AspectRatio"]
visible = false
position = Vector2( 293, 22.5 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="ArrowRight" type="Sprite" parent="AspectRatio"]
visible = false
position = Vector2( 575, 22.5 )
rotation = 3.14159
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Resolution" type="Control" parent="."]
margin_left = 43.0
margin_top = 149.0
margin_right = 83.0
margin_bottom = 189.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clickable" type="OptionButton" parent="Resolution"]
margin_left = 310.0
margin_right = 560.0
margin_bottom = 45.0
focus_mode = 0
custom_fonts/font = ExtResource( 9 )
enabled_focus_mode = 0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Resolution"]
margin_right = 283.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 9 )
text = "RESOLUTION:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowLeft" type="Sprite" parent="Resolution"]
visible = false
position = Vector2( 293, 21.5 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="ArrowRight" type="Sprite" parent="Resolution"]
visible = false
position = Vector2( 575, 21.5 )
rotation = -3.14159
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="DisplayMode" type="Control" parent="."]
margin_left = 43.0
margin_top = 226.0
margin_right = 83.0
margin_bottom = 266.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DisplayMode"]
margin_right = 283.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 9 )
text = "DISPLAY MODE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Windowed" type="Control" parent="DisplayMode"]
margin_left = 330.0
margin_right = 370.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Clickable" type="Button" parent="DisplayMode/Windowed"]
margin_right = 1767.0
margin_bottom = 262.0
rect_scale = Vector2( 0.148, 0.148 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
script = ExtResource( 8 )

[node name="Label" type="Label" parent="DisplayMode/Windowed"]
margin_left = 46.945
margin_right = 256.945
margin_bottom = 39.0
custom_fonts/font = ExtResource( 9 )
text = "WINDOWED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Control" parent="DisplayMode"]
margin_left = 639.945
margin_right = 679.945
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Clickable" type="Button" parent="DisplayMode/Fullscreen"]
margin_right = 1949.0
margin_bottom = 262.0
rect_scale = Vector2( 0.148, 0.148 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
script = ExtResource( 8 )
display_mode_id = 1

[node name="Label" type="Label" parent="DisplayMode/Fullscreen"]
margin_left = 47.0
margin_right = 282.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 9 )
text = "FULLSCREEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Borderless" type="Control" parent="DisplayMode"]
margin_left = 975.96
margin_right = 1015.96
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Clickable" type="Button" parent="DisplayMode/Borderless"]
margin_right = 1983.0
margin_bottom = 262.0
rect_scale = Vector2( 0.148, 0.148 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
script = ExtResource( 8 )
display_mode_id = 2

[node name="Label" type="Label" parent="DisplayMode/Borderless"]
margin_left = 46.945
margin_right = 256.945
margin_bottom = 39.0
custom_fonts/font = ExtResource( 9 )
text = "BORDERLESS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apply" type="Control" parent="."]
margin_left = 356.0
margin_top = 780.0
margin_right = 396.0
margin_bottom = 820.0

[node name="Clickable" type="Button" parent="Apply"]
margin_right = 285.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 9 )
text = "APPLY"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Control" parent="."]
margin_left = 43.0
margin_top = 780.0
margin_right = 83.0
margin_bottom = 820.0

[node name="Clickable" type="Button" parent="Resume"]
margin_right = 285.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 9 )
text = "RESUME"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessLabel" type="Label" parent="."]
margin_left = 1034.96
margin_top = 780.0
margin_right = 1526.96
margin_bottom = 861.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 9 )
text = "Settings applied successfully!"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
